--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -19,7 +19,7 @@
 }
 
 .video-info{
-    width: calc(100% - 100px);
+    width: 100%;
 }
 
 .video-youtube{
@@ -54,14 +54,14 @@
 }
 
 .video-write .video-write-md{
-    width: calc(100% - 22px);
-    height: calc(90% - 22px);
+    width: 100%;
+    height: 90%;
     padding: 11px;
 }
 
 .video-write .video-write-view{
-    width: calc(50% - 22px);
-    height: calc(100% - 22px);
+    width: 50%;
+    height: 100%;
     padding: 10px;
     background-color: #fff;
     border: #000 solid 1px;
@@ -69,8 +69,8 @@
 }
 
 .video-write .video-write-wrapper{
-    width: calc(50% - 2px);
-    height: calc(100% - 2px);
+    width: 50%;
+    height: 100%;
     /* padding: 10px; */
     background-color: #fff;
     border: #000 solid 1px;
@@ -79,8 +79,8 @@
 
 .video-write .video-write-btns{
     padding: 10px;
-    width: calc(100% - 20px);
-    height: calc(10% - 20px);
+    width: 100%;
+    height: 10%;
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
