--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -15,16 +15,20 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 150px;
+    height: 200px;
     background: #000;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
 }
 
+.sidebar .logo .sidebar-thumbnail {
+    border-radius: 50%;
+}
+
 .sidebar .search{
     position: absolute;
-    top: 150px;
+    top: 200px;
     left: 0;
     width: 100%;
     height: 50px;
