--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -1,10 +1,13 @@
+@value back-color #5732eb;
+
+
 .sidebar {
     position: fixed;
     top: 0;
     left: 0;
     width: 200px;
     height: 100%;
-    background: #222;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -16,7 +19,7 @@
     left: 0;
     width: 100%;
     height: 200px;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -32,7 +35,7 @@
     left: 0;
     width: 100%;
     height: 50px;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -44,7 +47,7 @@
     left: 0;
     width: 50px;
     height: 50px;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -55,7 +58,7 @@
     left: 50px;
     width: 150px;
     height: 50px;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -63,11 +66,11 @@
 
 .sidebar .sidebar-menu{
     position: absolute;
-    top: 200px;
+    top: 250px;
     left: 0;
     width: 100%;
     height: 100%;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -77,7 +80,7 @@
     position: absolute;
     width: calc(100% - 40px);
     height: 100%;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
@@ -86,7 +89,7 @@
 .sidebar .sidebar-menu ul li{
     width: 100%;
     height: 50px;
-    background: #000;
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
