--- a/styles/Topmenu.module.css
+++ b/styles/Topmenu.module.css
@@ -1,10 +1,12 @@
+@value back-color #151515;
+
 .top-menu{
     position: fixed;
     top: 0;
     left: 200px;
     width: 100%;
     height: 200px;
-    background: rgb(237, 107, 107);
+    background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
