--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -1,5 +1,5 @@
 @value back-color #2d2d2d;
-
+@valeu back-color-hover #0d3d3d;
 
 .sidebar {
     position: fixed;
@@ -77,19 +77,27 @@
 
 .sidebar .sidebar-menu ul{
     position: absolute;
-    width: calc(100% - 40px);
+    width: 100%;
     height: 100%;
     background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
+    padding-left: 0;
 }
 
 .sidebar .sidebar-menu ul li{
     width: 100%;
-    height: 50px;
+    height: 60px;
     background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
+    list-style: none;
+    padding-left: 0px;
+}
+
+.sidebar .sidebar-menu ul li:hover{
+    background: rgb(155, 155, 155);
+    cursor: pointer;
 }
