style : top menu style

--- a/styles/Topmenu.module.css
+++ b/styles/Topmenu.module.css
@@ -4,10 +4,41 @@
     position: fixed;
     top: 0;
     left: 200px;
-    width: 100%;
+    width: calc(100% - 200px);
     height: 200px;
     background: back-color;
     color: #fff;
     transition: all 0.3s;
     z-index: 1;
+}
+
+.title {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 5px;
+    margin: 40px 0 20px 20px;
+    
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.title:hover{
+    text-decoration: underline;
+}
+
+.description {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-left: 20px;
+    margin-right: 60px;
+    overflow: hidden; 
+    display: -webkit-box; 
+    -webkit-line-clamp: 3; /* 라인수 */ 
+    -webkit-box-orient: vertical; 
+    line-height: 1.2em; 
+    height: 3.6em; /* line-height 가 1.2em 이고 3라인을 자르기 때문에 height는 1.2em * 3 = 3.6em */ 
+
 }
