--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -38,31 +38,33 @@
 
 .video-youtube{
     width: 100%;
-    height: 34vh;
+    height: 0vh;
     /* position: fixed; */
     z-index: 1;
-    visibility: visible;
-    display: none;
+    visibility: hidden;
+    display: block;
     transition: all ease 1s;
 }
 .video-active{
+    height: 34vh;
     visibility:visible;
-    display: block;
     
 }
 
 
 .video-write{
     width: 100%;
-    height: 34vh;
+    height: 0vh;
     z-index: 1;
     background-color: #fff;
     visibility: hidden;
     /* display: none; */
-    display: none;    flex-direction: row;
+    display: flex;
+    flex-direction: row;
     transition: all ease 1s;
 }
 .video-container.editor-active .video-write{
+    height: 34vh;
     visibility:visible;
     display: flex;
 }
