--- a/src/styles/Video.module.css
+++ b/src/styles/Video.module.css
@@ -60,6 +60,7 @@
     display: flex;
     flex-direction: row;
     transition: all ease 1s;
+    color : #000;
 }
 .video-container.editor-active .video-write{
     height: 34vh;
@@ -72,13 +73,25 @@
     height: 90%;
     padding: 11px;
 }
+/* 
+.video-write .video-view-btns {
+    position:sticky;
+    top: 93%;
+} */
+
+.video-write .video-write-up {
+    width: 0% !important;
+}
+
+.video-write .video-view-up {
+    width: 100% !important; 
+}
 
 .video-write .video-write-view{
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 90%;
     padding: 10px;
     background-color: #fff;
-    border: #000 solid 1px;
     overflow: auto;
 }
 
@@ -89,6 +102,18 @@
     background-color: #fff;
     border: #000 solid 1px;
     overflow: auto;
+
+    transition: all ease 1s;
+}
+
+.video-write .video-view-wrapper{
+    width: 50%;
+    height: 100%;
+    background-color: #fff;
+    border: #000 solid 1px;
+    overflow: auto;
+
+    transition: all ease .5s;
 }
 
 .video-write .video-write-btns{
@@ -104,7 +129,7 @@
     width: 130px;
     color: white;
     font-weight: 600;
-    padding: 1px 30px;
+    padding: 1px 10px;
     border: none;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
