--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,10 @@ a {
   box-sizing: border-box;
 }
 
+hr{
+  border :1px solid hsla(210,18%,87%,1);
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
