--- a/src/styles/Video.module.css
+++ b/src/styles/Video.module.css
@@ -85,6 +85,23 @@
 
 .video-write .video-view-up {
     width: 100% !important; 
+    left: 0 !important;
+}
+
+.video-write .video-write-full {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video-write .video-view-full {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .video-write .video-write-view{
@@ -103,7 +120,7 @@
     border: #000 solid 1px;
     overflow: auto;
 
-    transition: all ease 1s;
+    transition: all ease .5s;
 }
 
 .video-write .video-view-wrapper{
