--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -16,3 +16,26 @@
 
     min-height: 88vh;
 }
+
+.container .more_btn {
+    width: 80%;
+    margin-bottom: 50px;
+
+    height: 50px;
+    color: #d9d9d9;
+    font-size: medium;
+    font-weight: bold;
+    background-color: #2f2f2f;
+
+    border: 1px solid #2f2f2f;
+    box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 0.3);
+}
+
+.container .more_btn:hover{
+    cursor: pointer;
+    box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.3);
+}
+.container .more_btn:active{
+    cursor: pointer;
+    box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.3);
+}
